# nlp_project

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
backend/: config.py  data_store.py  loaders.py  main.py
backend/scripts/: check_models.py  warmup.py
backend/services/: articles.py  chat.py  graph.py  phase_detector.py  stocks.py  tickers.py  timeline.py  topics.py
cache/: fixed_seasonality.parquet  fixed_timeline_grid.parquet  topic_graph.json  topic_ticker_matrix.parquet  topics.db
docs/: FINLENS_AGENT_BRIEF.md  INFERENCE.md  NewsLens.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js  index.css  main.jsx
frontend/src/components/: ArticlePanel.jsx  LifecycleChart.jsx  PhaseBadge.jsx  SeasonalityHeatmap.jsx  StocksTable.jsx  TickerDrawer.jsx  TickerMatrix.jsx  TopicComposer.jsx
frontend/src/pages/: Chat.jsx  Tickers.jsx  TopicExplorer.jsx  TopicGraph.jsx
models/finbert_multitask/: history.json
models/predictions/: multitask_predictions.parquet
notebook/: 01_dataset_downloader.ipynb  02_EDA.ipynb  03_NER.ipynb  04_Embeddings.ipynb  05_Topics.ipynb  05_labels.ipynb  06_Scoring.ipynb  06_finbert_multitask.ipynb  09_xgboost_tb.ipynb  financial_news_intelligence.ipynb  shap.ipynb
